--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: ruby
 rvm:
-  - 2.0.0
-  - 2.1.2
+  - 2.0.0-p648
+  - 2.1.8
+  - 2.2.4
+  - 2.3.0
   - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+before_install:
+ - gem update bundler
